// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxSizing renders 0 1`] = `
Array [
  .c0 {
  box-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSizing renders function 1`] = `
Array [
  .c0 {
  box-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSizing renders invalid theme path 1`] = `
Array [
  .c0 {
  box-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSizing renders negative number 1`] = `
Array [
  .c0 {
  box-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSizing renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-sizing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-sizing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-sizing: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-sizing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-sizing: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxSizing renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    box-sizing: July;
  }
}

@media April {
  .c0 {
    box-sizing: August;
  }
}

@media January {
  .c0 {
    box-sizing: September;
  }
}

@media April {
  .c0 {
    box-sizing: November;
  }
}

@media June {
  .c0 {
    box-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-sizing: July;
  }
}

@media April {
  .c0 {
    box-sizing: August;
  }
}

@media January {
  .c0 {
    box-sizing: September;
  }
}

@media April {
  .c0 {
    box-sizing: November;
  }
}

@media June {
  .c0 {
    box-sizing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-sizing: January;
  }
}

@media April {
  .c0 {
    box-sizing: December;
  }
}

@media January {
  .c0 {
    box-sizing: April;
  }
}

@media April {
  .c0 {
    box-sizing: May;
  }
}

@media June {
  .c0 {
    box-sizing: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-sizing: January;
  }
}

@media April {
  .c0 {
    box-sizing: December;
  }
}

@media January {
  .c0 {
    box-sizing: April;
  }
}

@media April {
  .c0 {
    box-sizing: May;
  }
}

@media June {
  .c0 {
    box-sizing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxSizing renders postitive number 1`] = `
Array [
  .c0 {
  box-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSizing renders string 1`] = `
Array [
  .c0 {
  box-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSizing renders valid theme path 1`] = `
Array [
  .c0 {
  box-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-sizing: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
